# CameraRtsp

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/pntt3011/cameraserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/controller/: main_controller.cpp  main_controller.h
app/src/main/cpp/includes/: main_controller.h
app/src/main/cpp/includes/encoder/: E_AAC.h  E_AACFrameQueue.h  E_H265.h  E_Platform.h
app/src/main/cpp/includes/media/: M_AFrameQueue.h  M_AudioSource.h  M_Platform.h  M_VideoSource.h  audio_source.h  video_source.h
app/src/main/cpp/includes/media/helper/: audio_frame_queue.h
app/src/main/cpp/includes/mediasource/: M_AudioSource.h  M_Platform.h  M_VideoSource.h
app/src/main/cpp/includes/processor/: P_VEmpty.h
app/src/main/cpp/includes/server/: S_AudioStream.h  S_Platform.h  S_RtpSession.h  S_RtspClient.h  S_RtspServer.h  S_StreamState.h  S_VideoStream.h  rtp_session.h  rtsp_server.h
app/src/main/cpp/includes/server/stream/: audio_stream.h  video_stream.h
app/src/main/cpp/includes/utils/: CircularDeque.h  Configs.h  FrameBuffer.h  HierarchyMemoryPool.h  MemoryPool.h  Packetizer.h  Platform.h  StreamStats.h  Utils.h  circular_deque.h  constant.h  h265_nal_unit.h  packetizer.h  stream_perf_monitor.h  time_utils.h
app/src/main/cpp/packetizer/: aac_latm_packetizer.cpp  aac_latm_packetizer.h  h265_packetizer.cpp  h265_packetizer.h  packetizer.h
app/src/main/cpp/server/: audio_stream.cpp  audio_stream.h  rtp_session.h  rtsp_server.cpp  rtsp_server.h  video_stream.cpp  video_stream.h
app/src/main/cpp/source/: audio_frame_queue.cpp  audio_frame_queue.h  audio_source.cpp  audio_source.h  media_source.h  video_source.cpp  video_source.h
app/src/main/cpp/src/: main.cpp  main_controller.cpp
app/src/main/cpp/src/encoder/: E_AAC.cpp  E_AACFrameQueue.cpp  E_H265.cpp
app/src/main/cpp/src/media/: M_AFrameQueue.cpp  M_AudioSource.cpp  M_VideoSource.cpp  audio_source.cpp  video_source.cpp
app/src/main/cpp/src/media/helper/: audio_frame_queue.cpp
app/src/main/cpp/src/mediasource/: M_AudioSource.cpp  M_VideoSource.cpp
app/src/main/cpp/src/server/: S_AudioStream.cpp  S_RtpSession.cpp  S_RtspClient.cpp  S_RtspServer.cpp  S_VideoStream.cpp  rtsp_server.cpp
app/src/main/cpp/src/server/stream/: audio_stream.cpp  video_stream.cpp
app/src/main/cpp/src/utils/: Packetizer.cpp  StreamStats.cpp  Utils.cpp
app/src/main/cpp/utils/: android_log.h  base64.h  circular_deque.h  constant.h  frame_buffer.h  h265_nal_unit.h  memory_pool.cpp  memory_pool.h  packetizer.h  scoped_environment.h  server_utils.h  stream_perf_monitor.h
app/src/main/java/com/pntt3011/cameraserver/: AACLATMPacketizer.kt  AudioSource.kt  CameraServer.kt  (+11 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
